# Meridian

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  PHASE8_HANDOFF.md  PRODUCT.md  README.md  SECURITY.md  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/: config.py  main.py  ratelimit.py
backend-java/: Dockerfile  pom.xml
backend-java/src/main/java/com/meridian/gateway/: GatewayApplication.java  ProxyController.java
backend-java/src/main/resources/: application.yml
backend-java/src/test/java/com/meridian/gateway/: ProxyControllerTest.java
backend/agents/: action.py  analysis.py  eval_agent.py  graph.py  state.py  triage.py
backend/db/: base.py  cassandra.py  session.py
backend/db/migrations/: env.py
backend/db/migrations/versions/: 0001_initial_schema.py
backend/eval/: build_ground_truth.py  gate.py  ground_truth.jsonl  harness.py  scheduler.py
backend/integrations/: github.py  gitlab.py  normalized.py  notion.py  salesforce.py  slack.py
backend/models/: __init__.py  agent_run.py  eval_result.py  event.py  incident.py
backend/rag/: embedder.py  ingest.py  pgpool.py  retriever.py
backend/routes/: eval.py  incidents.py  webhooks.py
backend/tests/: conftest.py  test_analysis.py  test_cassandra.py  test_eval_gate.py  test_eval_node.py  test_graph_compiles.py  test_harness.py  test_incidents.py  test_integrations.py  test_llm_throttle.py  test_notion.py  test_ratelimit.py  test_request_limits.py  test_retriever.py  test_salesforce.py  test_slack.py  test_slack_ingest.py  test_triage.py  test_webhooks.py
backend/tests/fixtures/: github_ci_failure.json  github_push.json  gitlab_pipeline.json  seed_incidents.jsonl  send_fixture.py
docker/: postgres-init.sql
docs/superpowers/specs/: 2026-06-10-meridian-plan-hardening-design.md
frontend/: package-lock.json  package.json
frontend/src/app/: actions.ts  layout.tsx  page.tsx
frontend/src/app/eval/: page.tsx
frontend/src/app/incidents/[id]/: page.tsx
frontend/src/components/: ApprovalButtons.tsx  EvalMetricsChart.tsx  IncidentDetail.tsx  IncidentFeed.tsx  badges.tsx
frontend/src/lib/: api.ts  types.ts
k8s/: configmap.yaml
